--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script src="https://kit.fontawesome.com/5b0b16b9a1.js" crossorigin="anonymous"></script>
     <link href="src/style.css" rel="stylesheet" type="text/css" />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <link href="src/index.js" />
+    <script src="src/script.js"></script>
   </head>
   <body>
     <div class="container">
