updated file names

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     />
     <script src="https://kit.fontawesome.com/5b0b16b9a1.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <link href="src/style.css" rel="stylesheet" type="text/css" />
+    <link href="src/styles.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <div class="container">
@@ -83,6 +83,6 @@
         <a href="https://www.linkedin.com/in/emilyjhend/" class="linkedin">Emily Henderson</a>
       </p>
     </div>
-    <script src="src/script.js"></script>
+    <script src="src/index.js"></script>
   </body>
 </html>
