--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     />
     <script src="https://kit.fontawesome.com/5b0b16b9a1.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <link href="src/styles.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="src/styles.css" />
   </head>
   <body>
     <div class="container">
