--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
        <div class="para-1">Currently In:</div>
         <h1 id="city"> </h1>
             <hr />
-        <h3 id="temperature">83°</h3>
+        <h3 id="temperature"></h3>
         <div class="para-2"><i class="fas fa-moon"></i></div>
         <br />
         <div class="card text-center">
