bootstrap elements added

--- a/index.html
+++ b/index.html
@@ -28,14 +28,16 @@
       
       <div class="card card-one">
         <p class="para-1" id="current-date"> </p>
-        <form class="app" id="search-form">
+        <form class="form-inline app" id="search-form">
             <input 
+            class="form-control form-control-sm input-form"
             type="search" 
             placeholder="Enter City Here" 
             autofocus="on" id="cityInput"/> <button 
+            class="btn btn-info btn-sm"
             type="search"
             id="search"
-            value="submit">Search</button> <button class="2" id="current">Current Location</button></form>
+            value="submit">Search</button> <button class="btn btn-outline-info btn-sm" id="current">Current Location</button></form>
        
        <div class="para-1">Currently In:</div>
         <h1 id="city"> </h1>
