added github link

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </div>
       <p class="p-footer">
         This page was built by
-        <a href="https://www.linkedin.com/in/emilyjhend/" class="linkedin">Emily Henderson</a>
+        <a href="https://github.com/emhend/weather-app2" class="linkedin">Emily Henderson</a>
       </p>
     </div>
     <script src="src/index.js"></script>
