--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
   </head>
   <body>
     <div class="container">
-      
       <div class="card card-one">
         <p class="para-1" id="current-date"></p>
         <form class="form-inline app" id="search-form">
@@ -37,20 +36,33 @@
             class="btn btn-info btn-sm"
             type="search"
             id="search"
-            value="submit">Search</button> <button class="btn btn-outline-info btn-sm" id="current">Current Location</button></form>
-      <hr />
-       <div class="para-1">Currently In:</div>
-        <h1 id="city"></h1>
-<div class="center-container">
-        <h3 id="temperature"></h3>
-<ul class="container-list">
-  <li id="humidity">humidity</li>
-  <li class="wind">wind</li>
-  <li class="percipitation">percipitation</li>
-</ul>
-        <div class="para-3" id="icon">
-          <i class="fas fa-cloud-sun"></i>
-</div></div>
+            value="submit">Search</button> <button class="btn btn-outline-info btn-sm" id="current">Current Location</button>
+          </form>
+    <hr />
+    <div class="app">
+    <div class="para-1">Currently In:</div>
+    <div class="col">  
+      <h1 id="city"></h1>
+      <div class="row">
+        <div class="col-sm">
+          <h3 id="temperature"></h3>
+        </div>
+        <div class="col-sm">
+              <img src="" id="icon"></a>
+        </div>
+        <div class="col-sm">
+          <ul class="container-list">
+              <li class="unit">
+                  <a href="#" id="celsius" class="links">C</a> | <a href="#" class="links" id="fahrenheit">F</a>
+              </li>
+              <li id="description"></li>
+              <li id="humidity"></li>
+              <li id="wind"></li>
+          </ul>
+          </div>
+        </div>
+      </div>
+    </div>
         <hr />
         <div class="card text-center">
             <div class="card-body card-two">
@@ -86,8 +98,8 @@
         </div>
       </div>
       <p class="p-footer">
-        <a href="https://github.com/emhend/weather-app2" class="linkedin" target="_blank">Open-source code</a> by
-        <a href="https://www.linkedin.com/in/emilyjhend/" class="linkedin" target="_blank">Emily Henderson</a>
+        <a href="https://github.com/emhend/weather-app2" class="links" target="_blank">Open-source code</a> by
+        <a href="https://www.linkedin.com/in/emilyjhend/" class="links" target="_blank">Emily Henderson</a>
       </p>
     </div>
     <script src="src/index.js"></script>
