--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <h3 id="temperature"></h3>
         </div>
         <div class="col-sm">
-              <img src="" id="icon"></a>
+              <img class="icon" src="" alt="" id="icon"></a>
         </div>
         <div class="col-sm">
           <ul class="container-list">
@@ -95,8 +95,8 @@
             </div>
             </div>
           </div>
-        </div>
       </div>
+    </div>
       <p class="p-footer">
         <a href="https://github.com/emhend/weather-app2" class="links" target="_blank">Open-source code</a> by
         <a href="https://www.linkedin.com/in/emilyjhend/" class="links" target="_blank">Emily Henderson</a>
