--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
       <h1 id="city"></h1>
       <div class="row">
         <div class="col-sm">
-          <h3 id="temperature"></h3>
+              <img class="icon" src="" alt="" id="icon"></a>
         </div>
         <div class="col-sm">
-              <img class="icon" src="" alt="" id="icon"></a>
+          <h3 id="temperature"></h3>
         </div>
         <div class="col-sm">
           <ul class="container-list">
@@ -98,6 +98,7 @@
       </div>
     </div>
       <p class="p-footer">
+        <a href="https://icons8.com/" class="links" target="_blank">Icons8</a>
         <a href="https://github.com/emhend/weather-app2" class="links" target="_blank">Open-source code</a> by
         <a href="https://www.linkedin.com/in/emilyjhend/" class="links" target="_blank">Emily Henderson</a>
       </p>
