changed icons added shadow

--- a/index.html
+++ b/index.html
@@ -5,22 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
-    
+    <!--Bootstrap-->
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    
+    <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Righteous&family=Zen+Tokyo+Zoo&display=swap"
       rel="stylesheet"
     />
+    <!---icons to be removed later-->
     <script src="https://kit.fontawesome.com/5b0b16b9a1.js" crossorigin="anonymous"></script>
+    <!---AXIOS-->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <!--CSS-->
     <link rel="stylesheet" href="src/styles.css" />
   </head>
   <body>
@@ -98,11 +101,12 @@
       </div>
     </div>
       <p class="p-footer">
-        <a href="https://icons8.com/" class="links" target="_blank">Icons8</a>
+        <a href="https://icons8.com/" class="links" target="_blank">Icons8.</a>
         <a href="https://github.com/emhend/weather-app2" class="links" target="_blank">Open-source code</a> by
         <a href="https://www.linkedin.com/in/emilyjhend/" class="links" target="_blank">Emily Henderson</a>
       </p>
     </div>
+    <!--JS-->
     <script src="src/index.js"></script>
   </body>
 </html>
