images resized + forecast function updated

--- a/index.html
+++ b/index.html
@@ -67,37 +67,7 @@
       </div>
     </div>
         <hr />
-        <div class="card text-center">
-            <div class="card-body card-two">
-          <div class="row" id="forecast">
-            <div class="col">
-                 <span class="para-1" id="day">Sunday</span>
-              <h2>96°</h2>
-              <span class="para-2" id="symbol"><i class="fas fa-cloud-sun"></i></span>
-            </div>
-            <div class="col">
-                <span class="para-1" id="day">Monday</span>
-              <h2>97°</h2>
-              <span class="para-2" id="symbol"><i class="fas fa-sun"></i></span>
-            </div>
-            <div class="col">
-                <span class="para-1" id="day">Tuesday</span>
-              <h2>96°</h2>
-              <span class="para-2" id="symbol"><i class="fas fa-cloud-sun"></i></span>
-            </div>
-            <div class="col">
-                <span class="para-1" id="day">Wednesday</span>
-              <h2>95°</h2>
-              <span class="para-2" id="symbol"><i class="fas fa-cloud-sun-rain"></i></span>
-            </div>
-            <div class="col">
-                <span class="para-1" id="day">Thursday</span>
-              <h2>95°</h2>
-              <span class="para-2" id="symbol"><i class="fas fa-sun"></i></span>
-            </div>
-            </div>
-            </div>
-          </div>
+        <div class="card-body card-two" id="forecast"></div>
       </div>
     </div>
       <p class="p-footer">
