--- a/index.html
+++ b/index.html
@@ -32,27 +32,27 @@
         <p class="para-1" id="current-date"></p>
         <form class="form-inline app" id="search-form">
             <input 
-            class="form-control form-control-sm input-form"
+            class="shadow-sm form-control form-control-sm input-form"
             type="search" 
             placeholder="Enter City Here" 
             autofocus="on" id="cityInput"/> <button 
-            class="btn btn-info btn-sm"
+            class="shadow-sm btn btn-info btn-sm"
             type="search"
             id="search"
-            value="submit">Search</button> <button class="btn btn-outline-info btn-sm" id="current">Current Location</button>
+            value="submit">Search</button> <button class="shadow-sm btn btn-outline-info btn-sm" id="current">Current Location</button>
           </form>
     <hr />
     <div class="para-1">Currently In:</div>
     <div class="col">  
       <h1 id="city"></h1>
       <div class="row">
-        <div class="col-sm">
+        <div class="col">
               <img class="icon" src="" alt="" id="icon"></a>
         </div>
-        <div class="col-sm">
+        <div class="col">
           <h3 id="temperature"></h3>
         </div>
-        <div class="col-sm">
+        <div class="col">
           <ul class="container-list">
               <li class="unit">
                   <a href="#" id="celsius" class="links">C</a> | <a href="#" class="links" id="fahrenheit">F</a>
